main/default/objects/EU_Taxonomy_Disclosure__c/EU_Taxonomy_Disclosure__c.object-meta.xml
<CustomObject>
    <label>EU Taxonomy Disclosure</label>
    <nameField>
        <label>EU Taxonomy Disclosure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EU Taxonomy Disclosures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>