main/default/objects/EU_Taxonomy_Disclosure__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>EU Taxonomy Disclosures</relationshipLabel>
    <relationshipName>EU_Taxonomy_Disclosures</relationshipName>
    <type>Lookup</type>
</CustomField>