main/default/objects/EU_Taxonomy_Disclosure__c/fields/Capex_EUR__c.field-meta.xml
<CustomField>
    <fullName>Capex_EUR__c</fullName>
    <label>Capex (EUR)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>