main/default/objects/EU_Taxonomy_Disclosure__c/fields/Disclosure_Year__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Year__c</fullName>
    <label>Disclosure Year</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2022</fullName>
            </value>
            <value>
                <fullName>2023</fullName>
            </value>
            <value>
                <fullName>2024</fullName>
            </value>
            <value>
                <fullName>2025</fullName>
            </value>
            <value>
                <fullName>2026</fullName>
            </value>
            <value>
                <fullName>2027</fullName>
            </value>
            <value>
                <fullName>2028</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>