main/default/objects/EU_Taxonomy_Disclosure__c/fields/Financial_Information_Status__c.field-meta.xml
<CustomField>
    <fullName>Financial_Information_Status__c</fullName>
    <label>Financial Information Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Estimated</fullName>
            </value>
            <value>
                <fullName>Interim</fullName>
            </value>
            <value>
                <fullName>Final</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>