main/default/objects/EU_Taxonomy_Disclosure__c/fields/Financial_KPIs__c.field-meta.xml
<CustomField>
    <fullName>Financial_KPIs__c</fullName>
    <label>Financial KPIs</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Turnover</fullName>
                <default>true</default>
                <label>Turnover</label>
            </value>
            <value>
                <fullName>Capex</fullName>
            </value>
            <value>
                <fullName>Opex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>