main/default/objects/EU_Taxonomy_Disclosure__c/fields/Program_Initiative__c.field-meta.xml
<CustomField>
    <fullName>Program_Initiative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Initiative</label>
    <referenceTo>ProgramInitiative</referenceTo>
    <relationshipLabel>EU Taxonomy Disclosures</relationshipLabel>
    <relationshipName>EU_Taxonomy_Disclosures</relationshipName>
    <type>Lookup</type>
</CustomField>