main/default/objects/EU_Taxonomy_Disclosure__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Welcome</fullName>
                <default>true</default>
                <label>Welcome</label>
            </value>
            <value>
                <fullName>Identify</fullName>
            </value>
            <value>
                <fullName>Map</fullName>
            </value>
            <value>
                <fullName>Screen</fullName>
            </value>
            <value>
                <fullName>Confirm Aligned</fullName>
            </value>
            <value>
                <fullName>Disclosure</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
                <isActive>false</isActive>
                <label>Draft</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <isActive>false</isActive>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Initialising</fullName>
                <isActive>false</isActive>
                <label>Initialising</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>