main/default/objects/EU_Taxonomy_Disclosure__c/fields/Turnover__c.field-meta.xml
<CustomField>
    <fullName>Turnover__c</fullName>
    <label>Turnover (EUR)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>