main/default/objects/EU_Taxonomy_Disclosure__c/listViews/Disclosure_by_Stage.listView-meta.xml
<ListView>
    <fullName>Disclosure_by_Stage</fullName>
    <columns>NAME</columns>
    <columns>Program_Initiative__c</columns>
    <columns>Account__c</columns>
    <columns>Turnover__c</columns>
    <columns>Capex_EUR__c</columns>
    <columns>Opex_EUR__c</columns>
    <filterScope>Mine</filterScope>
    <label>Disclosure by Stage</label>
</ListView>